gcc/testsuite/g++.dg/cpp0x/enum4.C
@@ -1,0 +1,8 @@
+// PR c++/40633
+// { dg-options "-std=c++0x" }
+
+template< typename T >
+struct wrap {
+   enum class E { val };
+};
+
